--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -17,7 +17,7 @@
         <div>
             <a href="/rango/about/">About</a><br />
             <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-            <img src="{{ MEDIA_URL}}cat.jpg" alt="Picture of my Cat" />
+            <img src="{{ MEDIA_URL}}cat.jpg" alt="Picture of a cat" />
         </div>
     </body>
 
